# psenet

./: .gitignore  .gitmodules  LICENSE  README.md  config.yaml  deploy.sh  log_rc47.txt  pyproject.toml  setup.py  test.py  train.sh  train_config.yaml
psenet/: __init__.py  config.py  data.py  eval.py  layers.py  losses.py  metrics.py  model.py  optimizers.py  preprocess.py  psenet.py  serve.py  train.py
psenet/backbones/: factory.py  mobilenet_v2.py
psenet/data/: __init__.py  generator.py  preprocess.py  processed.py  raw.py
psenet/data/utils/: build_data.py  build_example.py  metrics.py  preprocess.py  training.py
psenet/layers/: common.py  fpn.py
psenet/nets/: fpn.py
psenet/pse/: .ycm_extra_conf.py  __init__.py  adaptor.cpp  adaptor_1.cpp  adaptor_2.cpp  adaptor_3.cpp
psenet/utils/: build_example.py  build_processed_data.py  build_raw_data.py  build_raw_example.py  build_warm_checkpoint.py  examples.py  layers.py  losses.py  metrics.py  readers.py  training.py
scripts/: download_datasets.py
tests/: test_psenet.py
